force-app/main/default/objects/IM_PicklistConfig__c/IM_PicklistConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>IM_PicklistConfig</label>
</CustomObject>