force-app/main/default/objects/IM_PicklistConfig__c/fields/ControllingFieldName__c.field-meta.xml
<CustomField>
    <fullName>ControllingFieldName__c</fullName>
    <label>ControllingFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>