force-app/main/default/objects/IM_PicklistConfig__c/fields/Exclude_Fields__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Fields__c</fullName>
    <label>Exclude Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>