force-app/main/default/objects/IM_PicklistConfig__c/fields/GetCustomLabels__c.field-meta.xml
<CustomField>
    <fullName>GetCustomLabels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GetCustomLabels</label>
    <type>Checkbox</type>
</CustomField>